docs/0.18/_sources/api/gammapy.maps.HpxGeom.rst.txt
HpxGeom
=======

.. currentmodule:: gammapy.maps

.. autoclass:: HpxGeom
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~HpxGeom.as_energy_true
      ~HpxGeom.axes
      ~HpxGeom.center_coord
      ~HpxGeom.center_pix
      ~HpxGeom.center_skydir
      ~HpxGeom.data_shape
      ~HpxGeom.frame
      ~HpxGeom.ipix
      ~HpxGeom.is_allsky
      ~HpxGeom.is_flat
      ~HpxGeom.is_hpx
      ~HpxGeom.is_image
      ~HpxGeom.is_regular
      ~HpxGeom.ndim
      ~HpxGeom.nest
      ~HpxGeom.npix
      ~HpxGeom.nside
      ~HpxGeom.order
      ~HpxGeom.ordering
      ~HpxGeom.projection
      ~HpxGeom.region
      ~HpxGeom.shape_axes

   .. rubric:: Methods Summary

   .. autosummary::

      ~HpxGeom.contains
      ~HpxGeom.contains_pix
      ~HpxGeom.coord_to_idx
      ~HpxGeom.coord_to_pix
      ~HpxGeom.copy
      ~HpxGeom.create
      ~HpxGeom.crop
      ~HpxGeom.downsample
      ~HpxGeom.drop
      ~HpxGeom.energy_mask
      ~HpxGeom.from_hdu
      ~HpxGeom.from_hdulist
      ~HpxGeom.from_header
      ~HpxGeom.get_coord
      ~HpxGeom.get_idx
      ~HpxGeom.get_index_list
      ~HpxGeom.global_to_local
      ~HpxGeom.local_to_global
      ~HpxGeom.pad
      ~HpxGeom.pix_to_coord
      ~HpxGeom.pix_to_idx
      ~HpxGeom.resample_axis
      ~HpxGeom.slice_by_idx
      ~HpxGeom.solid_angle
      ~HpxGeom.squash
      ~HpxGeom.to_bands_hdu
      ~HpxGeom.to_cube
      ~HpxGeom.to_header
      ~HpxGeom.to_image
      ~HpxGeom.to_slice
      ~HpxGeom.to_swapped
      ~HpxGeom.to_ud_graded
      ~HpxGeom.to_wcs_geom
      ~HpxGeom.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: as_energy_true
   .. autoattribute:: axes
   .. autoattribute:: center_coord
   .. autoattribute:: center_pix
   .. autoattribute:: center_skydir
   .. autoattribute:: data_shape
   .. autoattribute:: frame
   .. autoattribute:: ipix
   .. autoattribute:: is_allsky
   .. autoattribute:: is_flat
   .. autoattribute:: is_hpx
   .. autoattribute:: is_image
   .. autoattribute:: is_regular
   .. autoattribute:: ndim
   .. autoattribute:: nest
   .. autoattribute:: npix
   .. autoattribute:: nside
   .. autoattribute:: order
   .. autoattribute:: ordering
   .. autoattribute:: projection
   .. autoattribute:: region
   .. autoattribute:: shape_axes

   .. rubric:: Methods Documentation

   .. automethod:: contains
   .. automethod:: contains_pix
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: drop
   .. automethod:: energy_mask
   .. automethod:: from_hdu
   .. automethod:: from_hdulist
   .. automethod:: from_header
   .. automethod:: get_coord
   .. automethod:: get_idx
   .. automethod:: get_index_list
   .. automethod:: global_to_local
   .. automethod:: local_to_global
   .. automethod:: pad
   .. automethod:: pix_to_coord
   .. automethod:: pix_to_idx
   .. automethod:: resample_axis
   .. automethod:: slice_by_idx
   .. automethod:: solid_angle
   .. automethod:: squash
   .. automethod:: to_bands_hdu
   .. automethod:: to_cube
   .. automethod:: to_header
   .. automethod:: to_image
   .. automethod:: to_slice
   .. automethod:: to_swapped
   .. automethod:: to_ud_graded
   .. automethod:: to_wcs_geom
   .. automethod:: upsample
